<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1,2,3,4" >

    
    <TableRow android:id="@+id/report_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="5dp" >
        
            
        <Button
        android:id="@+id/report_homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home_button"
        android:onClick="onClickMainMenu"/>
        
        <TextView android:id="@+id/report"
            android:layout_span="4"
            android:layout_gravity="center"
            android:text="@string/title_report"></TextView> 
    </TableRow>
            
    <TableRow android:id="@+id/header_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >
        
        <TextView android:id="@+id/activity_header"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/activity"></TextView>
        
        <TextView android:id="@+id/total_gal_header"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/total_gal"></TextView>
        
        <TextView android:id="@+id/total_lit_header"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/total_lit"></TextView>
    </TableRow>
    
    <TableRow android:id="@+id/bathroomSink_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView android:id="@+id/bathroomSink_report"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/bathroomSink_report"
            android:paddingLeft="6dp"></TextView>

        <TextView android:id="@+id/bathroomSink_total_gal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
        
        <TextView android:id="@+id/bathroomSink_total_lit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
    </TableRow>
    
    <TableRow android:id="@+id/dishwasher_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView android:id="@+id/dishwasher_report"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/dishwasher_report"
            android:paddingLeft="6dp"></TextView>
            
		<TextView android:id="@+id/dishwasher_total_gal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
        
        <TextView android:id="@+id/dishwasher_total_lit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
    </TableRow>
        
    <TableRow android:id="@+id/kitchenSink_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView android:id="@+id/kitchenSink_report"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/kitchenSink_report"
            android:paddingLeft="6dp"></TextView>
            
 		<TextView android:id="@+id/kitchenSink_total_gal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
        
        <TextView android:id="@+id/kitchenSink_total_lit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
    </TableRow>
            
    <TableRow android:id="@+id/laundry_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView android:id="@+id/laundry_report"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/laundry_report"
            android:paddingLeft="6dp"></TextView>
            
		 <TextView android:id="@+id/laundry_total_gal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
        
        <TextView android:id="@+id/laundry_total_lit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
    </TableRow>
            
    <TableRow android:id="@+id/outdoorHose_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView android:id="@+id/outdoorHose_report"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/outdoorHose_report"
            android:paddingLeft="6dp"></TextView>
            
		<TextView android:id="@+id/outdoorHose_total_gal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
        
        <TextView android:id="@+id/outdoorHose_total_lit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
    </TableRow>
            
    <TableRow android:id="@+id/shower_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView android:id="@+id/shower_report"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/shower_report"
            android:paddingLeft="6dp"></TextView>
            
		<TextView android:id="@+id/shower_total_gal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
        
        <TextView android:id="@+id/shower_total_lit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
    </TableRow>
            
    <TableRow android:id="@+id/sprinklers_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView android:id="@+id/sprinklers_report"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/sprinklers_report"
            android:paddingLeft="6dp"></TextView>
            
		<TextView android:id="@+id/sprinklers_total_gal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
        
        <TextView android:id="@+id/sprinklers_total_lit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
    </TableRow>
            
    <TableRow android:id="@+id/toilet_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView android:id="@+id/toilet_report"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/toilet_report"
            android:paddingLeft="6dp"></TextView>
            
		<TextView android:id="@+id/toilet_total_gal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
        
        <TextView android:id="@+id/toilet_total_lit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
    </TableRow>
            
    <TableRow android:id="@+id/misc_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView android:id="@+id/misc_report"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/misc_report"
            android:paddingLeft="6dp"></TextView>
            
		 <TextView android:id="@+id/misc_total_gal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
        
        <TextView android:id="@+id/misc_total_lit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
    </TableRow>
                
    <TableRow android:id="@+id/finalTotal_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:paddingTop="10dp" >
        
        <TextView android:id="@+id/finalTotal_report"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/total"
            android:paddingLeft="6dp"></TextView>
            
		<TextView android:id="@+id/finalTotal_total_gal"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
        
        <TextView android:id="@+id/finalTotal_total_lit"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/xx"></TextView>
    </TableRow>

    <Button
        android:id="@+id/extras_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_use"
        android:onClick="onClickExtras" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickClear"
        android:text="@string/clear_button" />

</TableLayout>
